# CFOV

./: .gitignore  CMakeLists.txt
Pdcurses/: pdcurses.lib
inc/: Common.h  DiamondWallsVisibility.h  LevelPoint.h  RayCastVisibility.h  Rectangle.h  ShadowCastVisibility.h  Size.h  Tile.h  TileMap.h  Visibility.h
src/: Common.cpp  DiamondWallsVisibility.cpp  RayCastVisibility.cpp  Rectangle.cpp  ShadowCastVisibility.cpp  Size.cpp  TileMap.cpp  main.cpp
